--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Мой сайт</title>
+    <title>Plotuper Team - та самая команда!</title>
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <h1>Привет, мир!</h1>
