--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Plotuper Team - та самая команда!</title>
+    <title>Plotuper Team - Сайт</title>
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
